// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex/> should renders correctly 1`] = `
<div>
  <div
    class="sc-gsTCUz djOLNO"
  >
    <div
      class="sc-bdfBwQ byYmRN"
    />
  </div>
</div>
`;

exports[`<Flex/> should renders correctly 2`] = `
<div>
  <div
    class="sc-gsTCUz hkYWzZ"
  />
</div>
`;

exports[`<Flex/> should renders gapless 1`] = `
<div>
  <div
    class="sc-gsTCUz iRYgGO"
  />
</div>
`;
